--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -860,5 +860,16 @@
   "Standard Vip": "スタンダード VIP",
   "Pro Vip": "プロ VIP",
   "Month": "月",
-  "Year": "年"
+  "Year": "年",
+  "Instant Savings": "即時節約",
+  "Current Status": "現在の状態",
+  "Accessible Foundation Model": "アクセシブルファウンデーションモデル",
+  "Accessible Advanced Model": "アクセシブル高度モデル",
+  "Accessible Top-Level Model": "アクセシブルトップレベルモデル",
+  "For users who have not created a wallet, the foundation model: {{num}} times/day": "ウォレットを作成していないユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
+  "For users who have created a wallet, the foundation model: {{ num }} times/day": "ウォレットを作成したユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
+  "For users who have completed KYC, the foundation model: {{ num }} times/day": "KYC を完了したユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
+  "Basic Model: {{num}} Times/Month": "基本モデル: {{ num }} 回 / 月",
+  "Premium Model: {{ num }} Times/Month": "プレミアムモデル: {{ num }} 回 / 月",
+  "Top-tier Model: {{ num }} Times/Month": "トップティアモデル: {{ num }} 回 / 月"
 }
