--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -859,5 +859,16 @@
   "Standard Vip": "Стандартный ВИП",
   "Pro Vip": "Профессиональный ВИП",
   "Month": "Месяц",
-  "Year": "Год"
+  "Year": "Год",
+  "Instant Savings": "Мгновенные Экономии",
+  "Current Status": "Текущий статус",
+  "Accessible Foundation Model": "Доступная фундаментальная модель",
+  "Accessible Advanced Model": "Доступная продвинутая модель",
+  "Accessible Top-Level Model": "Доступная верхнего уровня модель",
+  "For users who have not created a wallet, the foundation model: {{ num }} times/day": "Для пользователей, которые не создали кошелек, фундаментальная модель: {{ num }} раз/день",
+  "For users who have created a wallet, the foundation model: {{ num }} times/day": "Для пользователей, которые создали кошелек, фундаментальная модель: {{ num }} раз/день",
+  "For users who have completed KYC, the foundation model: {{ num }} times/day": "Для пользователей, которые завершили KYC, фундаментальная модель: {{ num }} раз/день",
+  "Basic Model: {{ num }} Times/Month": "Базовая Модель: {{ num }} Раз/Месяц",
+  "Premium Model: {{ num }} Times/Month": "Премиум Модель: {{ num }} Раз/Месяц",
+  "Top-tier Model: {{ num }} Times/Month": "Топ-Тиер Модель: {{ num }} Раз/Месяц"
 }
