--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -872,5 +872,7 @@
   "For users who have completed KYC, the foundation model: {{ num }} times/day": "Für Benutzer, die KYC abgeschlossen haben, das Basismodell: {{ num }} Mal pro Tag",
   "Basic Model: {{ num }} Times/Month": "Grundmodell: {{ num }} Mal/Monat",
   "Premium Model: {{ num }} Times/Month": "Premiummodell: {{ num }} Mal/Monat",
-  "Top-tier Model: {{ num }} Times/Month": "Top-Tier-Modell: {{ num }} Mal/Monat"
+  "Top-tier Model: {{ num }} Times/Month": "Top-Tier-Modell: {{ num }} Mal/Monat",
+  "VIP Upgrade Successful!": "VIP-Upgrade erfolgreich!",
+  "Failed to upgrade to VIP!": "Der VIP-Upgrade ist fehlgeschlagen!"
 }
