--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -871,5 +871,7 @@
   "For users who have completed KYC, the foundation model: {{ num }} times/day": "KYC를 완료한 사용자는 기저 모델: {{ num }} 회/일",
   "Basic Model: {{ num }} Times/Month": "기본 모델: {{ num }} 회/월",
   "Premium Model: {{ num }} Times/Month": "프리미엄 모델: {{ num }} 회/월",
-  "Top-tier Model: {{ num }} Times/Month": "최상위 계층 모델: {{ num }} 회/월"
+  "Top-tier Model: {{ num }} Times/Month": "최상위 계층 모델: {{ num }} 회/월",
+  "VIP Upgrade Successful!": "VIP 업그레이드에 성공했습니다!",
+  "Failed to upgrade to VIP!": "VIP 업그레이드에 실패했습니다!"
 }
