--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -871,5 +871,7 @@
   "For users who have completed KYC, the foundation model: {{ num }} times/day": "KYC'yi tamamlayan kullanıcılar için temel model: {{ num }} kez/gün",
   "Basic Model: {{ num }} Times/Month": "Temel Model: {{ num }} Kere/Ay",
   "Premium Model: {{ num }} Times/Month": "Premium Model: {{ num }} Kere/Ay",
-  "Top-tier Model: {{ num }} Times/Month": "Top-Tier Model: {{ num }} Kere/Ay"
+  "Top-tier Model: {{ num }} Times/Month": "Top-Tier Model: {{ num }} Kere/Ay",
+  "VIP Upgrade Successful!": "VIP yükseltimi başarıyla tamamlandı!",
+  "Failed to upgrade to VIP!": "VIP'e yükseltme başarısız oldu!"
 }
