update icon path

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -855,7 +855,7 @@
   "Optimize the code in the file": "优化文件中的代码",
   "In web page parsing...": "网页分析中...",
   "Deep Research": "深度搜索",
-  "Basic Vip": "VIP会员",
+  "Basic Vip": "基础VIP",
   "Standard Vip": "标准VIP",
   "Pro Vip": "高级VIP",
   "Month": "月",
